Add some more keywords

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "angular",
     "angular2",
     "angular4",
-    "cookie",
+    "angular-2",
+    "angular-4",
     "aot",
+    "aot-compatible",
+    "aot-compilation",
     "ngx",
     "ng2",
     "ng",
