Add `NgModule` To Provide `CookieService`
* This PR creates a `CookieModule` in which the `CookieService`
  is provided. Users are encouraged to add `CookieModule` to the
  `imports` section of an `NgModule` as opposed to adding `CookieService`
  to the `providers` section. However, adding `CookieService` as a
  provider will still work, so existing users of the library won't be
  required to make any changes.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service",
   "description": "an (aot ready) angular (4.2+) cookie service",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "license": "MIT",
   "author": "7leads GmbH <info@7leads.org>",
   "keywords": [
@@ -48,6 +48,9 @@
     },
     {
       "name": "DBaker85"
+    },
+    {
+      "name": "Sam Severance"
     }
   ],
   "main": "index.js",
