--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service",
   "description": "an (aot ready) angular (4.2+) cookie service",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "license": "MIT",
   "author": "7leads GmbH <info@7leads.org>",
   "keywords": [
@@ -12,6 +12,8 @@
     "angular-2",
     "angular-4",
     "angular-5",
+    "angular-6",
+    "angular-7",
     "aot",
     "aot-compatible",
     "aot-compilation",
