--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-5",
     "angular-6",
     "angular-7",
+    "angular-8",
     "aot",
     "aot-compatible",
     "aot-compilation",
@@ -27,6 +28,10 @@
     "cookies"
   ],
   "contributors": [
+    {
+      "name": "Stepan Suvorov",
+      "email": "stepan@studytube.nl"
+    },
     {
       "name": "Christopher Parotat",
       "email": "c.parotat@7leads.org"
@@ -71,11 +76,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/7leads/ngx-cookie-service.git"
+    "url": "https://github.com/stevermeister/ngx-cookie-service.git"
   },
   "bugs": {
-    "url": "https://github.com/7leads/ngx-cookie-service/issues",
-    "email": "info@7leads.org"
+    "url": "https://github.com/stevermeister/ngx-cookie-service/issues",
+    "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
     "@angular/core": ">=4.2.0",
