--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,32 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
-    "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
+    "downlevelIteration": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
-    "module": "es2015",
     "lib": [
-      "es2016",
+      "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ngx-cookie-service": [
+        "dist/ngx-cookie-service/ngx-cookie-service",
+        "dist/ngx-cookie-service"
+      ]
+    }
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
   }
 }
