chore: add prettier and format codebase

--- a/angular.json
+++ b/angular.json
@@ -32,17 +32,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "projects/ngx-cookie-service/tsconfig.lib.json",
-              "projects/ngx-cookie-service/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["projects/ngx-cookie-service/tsconfig.lib.json", "projects/ngx-cookie-service/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
-    }},
+    }
+  },
   "cli": {
     "analytics": "672a95e4-d4b2-4161-ac1f-25d2c513bef0"
   },
