--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "e2e": "ng e2e",
     "format": "prettier ./**/*.{ts,js,json}",
     "format:write": "npm run format -- --write",
-    "format:check": "npm run format -- --check"
+    "format:check": "npm run format -- --check",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
