ng update @angular/core @angular/cli

--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -72,7 +72,9 @@
   },
   "peerDependencies": {
     "@angular/common": "^9.0.5",
-    "@angular/core": "^9.0.5",
-    "tslib": "^1.10.0"
+    "@angular/core": "^9.0.5"
+},
+  "dependencies": {
+    "tslib": "^2.0.0"
   }
 }
