--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -17,6 +17,8 @@
     "angular-8",
     "angular-9",
     "angular-10",
+    "angular-11",
+    "angular-12",
     "aot",
     "aot-compatible",
     "aot-compilation",
@@ -71,8 +73,8 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^11.0.2",
-    "@angular/core": "^11.0.2"
+    "@angular/common": "^12.0.0",
+    "@angular/core": "^12.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
