--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-cookie-service",
-  "description": "an (aot ready) angular (4.2+) cookie service",
+  "description": "An (aot ready) angular (4.2+) cookie service",
   "version": "12.0.2",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
@@ -32,6 +32,9 @@
     "cookies"
   ],
   "contributors": [
+    {
+      "name": "Pavan Kumar Jadda"
+    },
     {
       "name": "Christopher Parotat",
       "email": "c.parotat@7leads.org"
