--- a/projects/ngx-cookie-service/tsconfig.lib.json
+++ b/projects/ngx-cookie-service/tsconfig.lib.json
@@ -12,7 +12,8 @@
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
-    "enableResourceInlining": true
+    "enableResourceInlining": true,
+    "fullTemplateTypeCheck": true
   },
   "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
