--- a/.github/ISSUE_TEMPLATE/1-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.yaml
@@ -45,6 +45,7 @@ body:
     attributes:
       label: What version of Angular are you using?
       options:
+        - Angular 13
         - Angular 12
         - Angular 11
         - Angular 10
