--- a/package.json
+++ b/package.json
@@ -16,34 +16,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.6",
-    "@angular/common": "^12.2.6",
-    "@angular/compiler": "^12.2.6",
-    "@angular/core": "^12.2.6",
-    "@angular/forms": "^12.2.6",
-    "@angular/platform-browser": "^12.2.6",
-    "@angular/platform-browser-dynamic": "^12.2.6",
-    "@angular/router": "^12.2.6",
+    "@angular/animations": "^13.0.0-rc.0",
+    "@angular/common": "^13.0.0-rc.0",
+    "@angular/compiler": "^13.0.0-rc.0",
+    "@angular/core": "^13.0.0-rc.0",
+    "@angular/forms": "^13.0.0-rc.0",
+    "@angular/platform-browser": "^13.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^13.0.0-rc.0",
+    "@angular/router": "^13.0.0-rc.0",
     "prettier": "^2.4.1",
-    "rxjs": "~7.3.0",
+    "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.6",
-    "@angular-eslint/builder": "1.2.0",
-    "@angular-eslint/eslint-plugin": "1.2.0",
-    "@angular-eslint/eslint-plugin-template": "1.2.0",
-    "@angular-eslint/schematics": "1.2.0",
-    "@angular-eslint/template-parser": "1.2.0",
-    "@angular/cli": "^12.2.6",
-    "@angular/compiler-cli": "^12.2.6",
-    "@angular/language-service": "^12.2.6",
-    "@types/jasmine": "^3.9.1",
-    "@types/jasminewd2": "^2.0.9",
-    "@types/node": "^12.20.25",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@angular-devkit/build-angular": "^13.0.0-rc.0",
+    "@angular-eslint/builder": "12.5.0",
+    "@angular-eslint/eslint-plugin": "12.5.0",
+    "@angular-eslint/eslint-plugin-template": "12.5.0",
+    "@angular-eslint/schematics": "12.5.0",
+    "@angular-eslint/template-parser": "12.5.0",
+    "@angular/cli": "^13.0.0-rc.0",
+    "@angular/compiler-cli": "^13.0.0-rc.0",
+    "@angular/language-service": "^13.0.0-rc.0",
+    "@types/jasmine": "^3.10.0",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^14.17.27",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
     "codelyzer": "^6.0.2",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
