feat(ssr): injects server `request` object to get cookies on server side

--- a/projects/ngx-cookie-service/tsconfig.lib.json
+++ b/projects/ngx-cookie-service/tsconfig.lib.json
@@ -11,7 +11,7 @@
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
-    "strictMetadataEmit": true,
+    "strictMetadataEmit": false,
     "enableResourceInlining": true,
     "fullTemplateTypeCheck": true
   },
