--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^12.2.6",
     "@angular/platform-browser-dynamic": "^12.2.6",
     "@angular/router": "^12.2.6",
+    "@nguniversal/express-engine": "^12.1.2",
     "prettier": "^2.4.1",
     "rxjs": "~7.3.0",
     "tslib": "^2.3.1",
