--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Format check
         run: npm run format:check
       - name: Build
-        run: npm run build -- --prod
+        run: npm run build --configuration=production
       - name: Test
-        run: npm run test -- --configuration=ci
+        run: npm run test --configuration=ci
         env:
           CI: true
