--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service",
   "description": "An (aot ready) angular (4.2+) cookie service",
-  "version": "12.1.0-rc.0",
+  "version": "12.1.0-rc.3",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
   "keywords": [
@@ -77,7 +77,8 @@
   },
   "peerDependencies": {
     "@angular/common": "^12.0.0",
-    "@angular/core": "^12.0.0"
+    "@angular/core": "^12.0.0",
+    "@nguniversal/express-engine": "^12.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
