--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/cli": "^12.2.6",
     "@angular/compiler-cli": "^12.2.6",
     "@angular/language-service": "^12.2.6",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "^3.9.1",
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^12.20.25",
