--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.0.0-rc.2",
-    "@angular/common": "^13.0.0-rc.2",
-    "@angular/compiler": "^13.0.0-rc.2",
-    "@angular/core": "^13.0.0-rc.2",
-    "@angular/forms": "^13.0.0-rc.2",
-    "@angular/platform-browser": "^13.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "^13.0.0-rc.2",
-    "@angular/router": "^13.0.0-rc.2",
+    "@angular/animations": "^13.0.0",
+    "@angular/common": "^13.0.0",
+    "@angular/compiler": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "@angular/forms": "^13.0.0",
+    "@angular/platform-browser": "^13.0.0",
+    "@angular/platform-browser-dynamic": "^13.0.0",
+    "@angular/router": "^13.0.0",
     "prettier": "^2.4.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.0-rc.2",
+    "@angular-devkit/build-angular": "^13.0.0",
     "@angular-eslint/builder": "12.5.0",
     "@angular-eslint/eslint-plugin": "12.5.0",
     "@angular-eslint/eslint-plugin-template": "12.5.0",
-    "@angular-eslint/schematics": "12.5.0",
+    "@angular-eslint/schematics": "12.6.1",
     "@angular-eslint/template-parser": "12.5.0",
-    "@angular/cli": "^13.0.0-rc.2",
-    "@angular/compiler-cli": "^13.0.0-rc.2",
-    "@angular/language-service": "^13.0.0-rc.2",
+    "@angular/cli": "^13.0.0",
+    "@angular/compiler-cli": "^13.0.0",
+    "@angular/language-service": "^13.0.0",
     "@types/jasmine": "^3.10.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^14.17.27",
