--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
           node-version: 16.x
       - name: Install dependencies
         run: npm ci
-      - name: Lint
-        run: npm run lint
+#      - name: Lint
+#        run: npm run lint
       - name: Format check
         run: npm run format:check
       - name: Build
