--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ['ubuntu-latest', 'ubuntu-18.04', 'macos-11', 'macos-10.15']
+        os: ['ubuntu-latest']
         node: ['12', '14', '16']
     steps:
       - uses: actions/checkout@v2
