feat(ssr): adds SSR support

--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -78,9 +78,18 @@
   },
   "peerDependencies": {
     "@angular/common": "^13.0.0",
-    "@angular/core": "^13.0.0"
+    "@angular/core": "^13.0.0",
+    "@nguniversal/express-engine": "^13.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
+  },
+  "resolve": {
+    "fallback": {
+      "path": false,
+      "http": false,
+      "stream": false,
+      "util": false
+    }
   }
 }
