--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/cli": "^13.0.3",
     "@angular/compiler-cli": "^13.0.2",
     "@angular/language-service": "^13.0.2",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "^3.10.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^14.17.27",
