--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^13.0.2",
     "@angular/platform-browser-dynamic": "^13.0.2",
     "@angular/router": "^13.0.2",
+    "@nguniversal/express-engine": "^13.0.1",
     "prettier": "^2.4.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
