--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: Install dependencies
         run: npm ci
-      #      - name: Lint
-      #        run: npm run lint
+      - name: Lint
+        run: npm run lint
       - name: Format check
         run: npm run format:check
       - name: Build
