--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
     "paths": {
-      "ngx-cookie-service": ["dist/ngx-cookie-service/ngx-cookie-service", "dist/ngx-cookie-service"]
+      "ngx-cookie-service": ["projects/ngx-cookie-service/src/public-api.ts"],
+      "ngx-cookie-service/express-ssr": ["projects/ngx-cookie-service/express-ssr/src/public-api.ts"],
+      "ngx-cookie-service/request-provider": ["projects/ngx-cookie-service/request-provider/src/public-api.ts"],
     }
   },
   "angularCompilerOptions": {
