--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^13.2.1",
     "@angular/platform-browser-dynamic": "^13.2.1",
     "@angular/router": "^13.2.1",
+    "@nguniversal/express-engine": "^13.0.2",
     "rxjs": "~7.5.2",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
