--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0-rc.2",
-    "@angular/common": "^14.0.0-rc.2",
-    "@angular/compiler": "^14.0.0-rc.2",
-    "@angular/core": "^14.0.0-rc.2",
-    "@angular/forms": "^14.0.0-rc.2",
-    "@angular/platform-browser": "^14.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "^14.0.0-rc.2",
-    "@angular/router": "^14.0.0-rc.2",
+    "@angular/animations": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "rxjs": "^7.5.5",
     "tslib": "^2.4.0",
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.0-rc.2",
+    "@angular-devkit/build-angular": "^14.0.0",
     "@angular-eslint/builder": "13.2.1",
     "@angular-eslint/eslint-plugin": "13.2.1",
     "@angular-eslint/eslint-plugin-template": "13.2.1",
     "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "^14.0.0-rc.2",
-    "@angular/compiler-cli": "^14.0.0-rc.2",
-    "@angular/language-service": "^14.0.0-rc.2",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/language-service": "^14.0.0",
     "prettier": "^2.6.2",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
