feat(core): adds Angular 14 support (#234)
* feat(core): upgrades angular version to 14.0.0

--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service",
   "description": "Angular cookie service",
-  "version": "13.2.1",
+  "version": "14.0.0",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
   "keywords": [
@@ -20,6 +20,7 @@
     "angular-11",
     "angular-12",
     "angular-13",
+    "angular-14",
     "ivy",
     "ivy-compatible",
     "ivy-compilation",
@@ -77,8 +78,8 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^13.0.0",
-    "@angular/core": "^13.0.0"
+    "@angular/common": "^14.0.0",
+    "@angular/core": "^14.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
