--- a/package.json
+++ b/package.json
@@ -16,50 +16,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.2.1",
-    "@angular/common": "^13.2.1",
-    "@angular/compiler": "^13.2.1",
-    "@angular/core": "^13.2.1",
-    "@angular/forms": "^13.2.1",
-    "@angular/platform-browser": "^13.2.1",
-    "@angular/platform-browser-dynamic": "^13.2.1",
-    "@angular/router": "^13.2.1",
-    "rxjs": "~7.5.2",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
+    "rxjs": "^7.5.5",
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.2",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "^13.2.2",
-    "@angular/compiler-cli": "^13.2.1",
-    "@angular/language-service": "^13.2.1",
-    "prettier": "^2.5.1",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular-eslint/builder": "13.2.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/language-service": "^14.0.0",
+    "prettier": "^2.6.2",
     "@types/express": "^4.17.13",
-    "@types/jasmine": "^3.10.3",
+    "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^17.0.14",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
-    "codelyzer": "^6.0.2",
-    "eslint": "^8.8.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsdoc": "37.7.1",
+    "@types/node": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "5.23.0",
+    "@typescript-eslint/parser": "5.23.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsdoc": "39.2.9",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~4.0.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.13",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.1.0",
-    "karma-jasmine": "~4.0.1",
+    "jasmine-core": "^4.1.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^13.2.1",
-    "protractor": "~7.0.0",
-    "ts-node": "~10.4.0",
-    "typescript": "^4.5.5"
+    "ng-packagr": "^14.0.0-rc.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
