chore(cicd): updates github actions to force install deps

--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -12,10 +12,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli @angular/core
       - name: Install NPM Dependencies
-        run: npm ci
+        run: npm ci --force
       - name: Build project
         run: ng build --configuration production --project=ngx-cookie-service
       - name: Publish to NPM
