--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install NPM Dependencies
         run: npm i --legacy-peer-deps
       - name: Build project
-        run: npm run build:ngx-cookie-service-ssr --configuration=production
+        run: npm run build --configuration=production
       - name: Publish to NPM
         uses: JS-DevTools/npm-publish@v1
         with:
