--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0-rc.4",
-    "@angular/common": "^15.0.0-rc.4",
-    "@angular/compiler": "^15.0.0-rc.4",
-    "@angular/core": "^15.0.0-rc.4",
-    "@angular/forms": "^15.0.0-rc.4",
-    "@angular/platform-browser": "^15.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^15.0.0-rc.4",
-    "@angular/router": "^15.0.0-rc.4",
+    "@angular/animations": "^15.0.0",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
     "@nguniversal/express-engine": "^15.0.0-rc.1",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0-rc.4",
+    "@angular-devkit/build-angular": "^15.0.0",
     "@angular-eslint/builder": "14.2.0",
     "@angular-eslint/eslint-plugin": "14.2.0",
     "@angular-eslint/eslint-plugin-template": "14.2.0",
     "@angular-eslint/schematics": "14.2.0",
     "@angular-eslint/template-parser": "14.2.0",
-    "@angular/cli": "^15.0.0-rc.5",
-    "@angular/compiler-cli": "^15.0.0-rc.4",
-    "@angular/language-service": "^15.0.0-rc.4",
+    "@angular/cli": "^15.0.0",
+    "@angular/compiler-cli": "^15.0.0",
+    "@angular/language-service": "^15.0.0",
     "prettier": "^2.7.1",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
@@ -60,7 +60,7 @@
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "ng-packagr": "^15.0.0-rc.0",
+    "ng-packagr": "^15.0.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.8.4"
   }
