--- a/projects/ngx-cookie-service-ssr/package.json
+++ b/projects/ngx-cookie-service-ssr/package.json
@@ -79,9 +79,9 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@nguniversal/express-engine": "^15.0.0"
+    "@angular/common": "^16.0.0-next.0",
+    "@angular/core": "^16.0.0-next.0",
+    "@nguniversal/express-engine": "^15.2.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
