refactor(tests): converts karma tests to jest

--- a/projects/ngx-cookie-service/tsconfig.lib.json
+++ b/projects/ngx-cookie-service/tsconfig.lib.json
@@ -14,5 +14,5 @@
     "enableResourceInlining": true,
     "fullTemplateTypeCheck": true
   },
-  "exclude": ["src/test.ts", "**/*.spec.ts"]
+  "exclude": [ "**/*.spec.ts"]
 }
