--- a/angular.json
+++ b/angular.json
@@ -22,18 +22,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-devkit/build-angular:jest",
           "options": {
-            "main": "projects/ngx-cookie-service/src/test.ts",
-            "tsConfig": "projects/ngx-cookie-service/tsconfig.spec.json",
-            "karmaConfig": "projects/ngx-cookie-service/karma.conf.js"
-          },
-          "configurations": {
-            "ci": {
-              "watch": false,
-              "progress": false,
-              "browsers": "ChromeHeadlessCI"
-            }
+            "polyfills": ["zone.js", "zone.js/testing"],
+            "tsConfig": "projects/ngx-cookie-service/tsconfig.spec.json"
           }
         },
         "lint": {
@@ -69,11 +61,10 @@
           "defaultConfiguration": "production"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-devkit/build-angular:jest",
           "options": {
             "main": "projects/ngx-cookie-service-ssr/src/test.ts",
-            "tsConfig": "projects/ngx-cookie-service-ssr/tsconfig.spec.json",
-            "karmaConfig": "projects/ngx-cookie-service-ssr/karma.conf.js"
+            "tsConfig": "projects/ngx-cookie-service-ssr/tsconfig.spec.json"
           }
         }
       }
