--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -8,14 +8,17 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
+      - uses: actions/setup-node@v2
         with:
           node-version: 18
       - name: Install NPM Dependencies
-        run: npm i --legacy-peer-deps
+        run: pnpm install --frozen-lockfile
       - name: Build project
-        run: npm run build --configuration=production
+        run: pnpm build --configuration=production
       - name: Publish to NPM
         uses: JS-DevTools/npm-publish@v1
         with:
