--- a/.github/workflows/npm_publish_ssr.yml
+++ b/.github/workflows/npm_publish_ssr.yml
@@ -8,15 +8,18 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
+      - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - name: Install NPM Dependencies
-        run: npm i --legacy-peer-deps
+      - name: Install PNPM Dependencies
+        run: pnpm install --frozen-lockfile
       - name: Build project
-        run: npm run build:ngx-cookie-service-ssr
-      - name: Publish to NPM
+        run: pnpm build:ngx-cookie-service-ssr
+      - name: Publish to NPM registry
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
